# python-wikipedia-api

./: README.md  pyproject.toml
src/python_wikipedia_api/: console.py
